[gd_scene format=3 uid="uid://s8h8l8cruos6"]

[ext_resource type="Script" uid="uid://lrvcqpj33ygn" path="res://scenes/menus/pause_menu/pause_menu.gd" id="1_lde4l"]

[node name="PauseMenu" type="CanvasLayer" unique_id=361056143]
process_mode = 3
script = ExtResource("1_lde4l")

[node name="Background" type="ColorRect" parent="." unique_id=1195388899]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.42, 0.42, 0.42, 0.6862745)

[node name="HBoxContainer" type="HBoxContainer" parent="." unique_id=1692481838]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
grow_vertical = 2

[node name="FovSlider" type="HSlider" parent="HBoxContainer" unique_id=1285141366]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
min_value = 75.0
max_value = 120.0
value = 100.0
tick_count = 1

[node name="FovLabel" type="Label" parent="HBoxContainer" unique_id=2124479277]
layout_mode = 2
text = "75"
